--- a/src/main/resources/templates/job-detail.html
+++ b/src/main/resources/templates/job-detail.html
@@ -7,8 +7,9 @@
 <div th:replace="fragments :: page-header"></div>
 
 <div class="container body-content">
+<div th:replace="list-jobs :: single-job"></div>
 
-    <!-- // TODO #2 - display the job fields, one per row -->
+    <!-- // TODO #2 DONE! - display the job fields, one per row -->
 
 </div>
 
